adding an example pod

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ description: >
 dependencies:
 
 # custom <ebisu_pod dependencies>
+
+  ebisu: "^0.6.7"
+
+
 # end <ebisu_pod dependencies>
 
 dev_dependencies:
