--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dev_dependencies:
   hop_docgen: "any"
 
 # custom <ebisu_pod dev dependencies>
+
+  test: "^0.12.0"
+  
 # end <ebisu_pod dev dependencies>
 
 dependency_overrides:
