--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,8 @@ dependencies:
 
 # custom <ebisu_pod dependencies>
 
-  ebisu: "^0.6.18"    
-  ebisu_cpp: "^0.3.20"
+  ebisu: "^0.7.3"    
+  ebisu_cpp: "^0.3.22"
 
 # end <ebisu_pod dependencies>
 
@@ -33,9 +33,6 @@ dev_dependencies:
 
   test: "^0.12.0"
   
-  drudge:
-    git: git://github.com/patefacio/drudge
-
 environment:
   sdk: ">=1.8.0 <2.0.0"
   
@@ -44,8 +41,8 @@ environment:
 dependency_overrides:
 # custom <ebisu_pod dependency overrides>
 
-  ebisu:
-    git: git://github.com/patefacio/ebisu
+  ebisu: "^0.7.3"
+#    git: git://github.com/patefacio/ebisu
 
 #    path: ../ebisu
 
