add missing package dependencies

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,13 @@ dependencies:
 
 # custom <ebisu_pod dependencies>
 
+  collection: ">=1.1.0<1.14.0"
   ebisu: "^0.7.5"
   ebisu_cpp: "^0.3.25"
-
+  id: "^1.0.16"
+  logging: ">=0.9.3<0.12.0"
+  quiver: ">=0.21.0<0.25.0"
+  path: "^1.4.1"  
     
 # end <ebisu_pod dependencies>
 
