get ebisu_rs from github

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   ebisu: "^0.7.5"
   ebisu_cpp: "^0.3.25"
   ebisu_rs:
-    path: ../ebisu_rs
+    git: git://github.com/patefacio/ebisu_rs
   id: "^1.0.16"
   logging: ">=0.9.3<0.12.0"
   quiver: ">=0.21.0<0.25.0"
