Add localPodMaps, throw informative exception if can't find type
- Add PartialOrd and Ord to enums
- Add rust_has_snake_conversions and rust_has_shout_conversions
- Switch from HashMap to BTreeMap for ordering properties
- Add support for PodObjects rust_is_encapsulated

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,19 +3,19 @@
     "configurations": [
         {
             "name": "codegen",
-            "type": "dart-cli",
+            "type": "dart",
             "request": "launch",
             "program": "${workspaceRoot}/codegen/ebisu_pod.ebisu_dart.dart"
         },
         {
             "name": "test rust",
-            "type": "dart-cli",
+            "type": "dart",
             "request": "launch",
             "program": "${workspaceRoot}/test/test_pod_rust_mapper.dart"
         },
         {
             "name": "Test Runner",
-            "type": "dart-cli",
+            "type": "dart",
             "request": "launch",
             "program": "${workspaceRoot}/test/runner.dart"
         }
