--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,20 +12,26 @@ description: >
   code generators.
 
 environment:
-  sdk: '>=1.8.2 <2.0.0'
+  sdk: '>=2.0.0-dev.61 <3.0.0'
 
 dependencies:
 
 # custom <ebisu_pod dependencies>
 
-  collection: ">=1.1.0<1.14.0"
-  ebisu: "^0.7.5"
-  ebisu_cpp: "^0.3.25"
+  collection: "1.14.11"
+  ebisu:
+    git: git://github.com/patefacio/ebisu.git
+  ebisu_cpp:
+    git: git://github.com/patefacio/ebisu_cpp.git
+
   ebisu_rs:
     git: git://github.com/patefacio/ebisu_rs
-  id: "^1.0.16"
-  logging: ">=0.9.3<0.12.0"
-  quiver: ">=0.21.0<0.25.0"
+
+  id:
+    git: git://github.com/patefacio/id.git
+
+  quiver: "2.0.0+1"
+  logging: "0.11.3+2"
   path: "^1.4.1"  
     
 # end <ebisu_pod dependencies>
@@ -34,7 +40,7 @@ dev_dependencies:
 
 # custom <ebisu_pod dev dependencies>
 
-  test: ">=0.12.0 < 0.14.0"
+  test: "^1.3.0"
   
 # end <ebisu_pod dev dependencies>
 
