--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,26 +12,24 @@ description: >
   code generators.
 
 environment:
-  sdk: '>=2.0.0-dev.61 <3.0.0'
+  sdk: '>=1.8.2 <=2.0.0-dev.20.0'
 
 dependencies:
 
 # custom <ebisu_pod dependencies>
 
-  collection: "1.14.11"
-  ebisu:
-    git: git://github.com/patefacio/ebisu.git
-  ebisu_cpp:
-    git: git://github.com/patefacio/ebisu_cpp.git
-
   ebisu_rs:
-    git: git://github.com/patefacio/ebisu_rs
+    git:
+      url: git://github.com/patefacio/ebisu_rs.git
+      ref: dart_1_0
+  ebisu_cpp:
+    git:
+      url: git://github.com/patefacio/ebisu_cpp.git
+      ref: dart_1_0
 
-  id:
-    git: git://github.com/patefacio/id.git
-
-  quiver: "2.0.0+1"
-  logging: "0.11.3+2"
+  collection: ">=1.1.0<1.14.0"
+  logging: ">=0.9.3<0.12.0"
+  quiver: ">=0.21.0<0.25.0"
   path: "^1.4.1"  
     
 # end <ebisu_pod dependencies>
@@ -40,7 +38,7 @@ dev_dependencies:
 
 # custom <ebisu_pod dev dependencies>
 
-  test: "^1.3.0"
+  test: ">=0.12.0 < 0.14.0"
   
 # end <ebisu_pod dev dependencies>
 
